--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="./styles/main.css">
     <title>TODO List</title>
+    <meta name="google-site-verification" content="qUZypI5WVSZPIL8yzOOA8aRoFE2iOVO-YM1jy9_Pvac" />
 </head>
 
 <body>
